--- a/sample-pktwallet.conf
+++ b/sample-pktwallet.conf
@@ -13,7 +13,7 @@
 ; The directory to open and save wallet, transaction, and unspent transaction
 ; output files.  Two directories, `mainnet` and `testnet` are used in this
 ; directory for mainnet and testnet wallets, respectively.
-; appdata=~/.btcwallet
+; appdata=~/.pktwallet
 
 
 ; ------------------------------------------------------------------------------
@@ -27,11 +27,11 @@
 ; proxyuser=
 ; proxypass=
 
-; The server and port used for btcd websocket connections.
+; The server and port used for pktd websocket connections.
 ; rpcconnect=localhost:18334
 
-; File containing root certificates to authenticate a TLS connections with btcd
-; cafile=~/.btcwallet/btcd.cert
+; File containing root certificates to authenticate a TLS connections with pktd
+; cafile=~/.pktwallet/pktd.cert
 
 
 
@@ -40,8 +40,8 @@
 ; ------------------------------------------------------------------------------
 
 ; TLS certificate and key file locations
-; rpccert=~/.btcwallet/rpc.cert
-; rpckey=~/.btcwallet/rpc.key
+; rpccert=~/.pktwallet/rpc.cert
+; rpckey=~/.pktwallet/rpc.key
 
 ; Enable one time TLS keys.  This option results in the process generating
 ; a new certificate pair each startup, writing only the certificate file
@@ -86,16 +86,16 @@
 ; RPC settings (both client and server)
 ; ------------------------------------------------------------------------------
 
-; Username and password to authenticate to btcd a RPC server and authenticate
+; Username and password to authenticate to pktd a RPC server and authenticate
 ; new client connections
 ; username=
 ; password=
 
-; Alternative username and password for btcd.  If set, these will be used
+; Alternative username and password for pktd.  If set, these will be used
 ; instead of the username and password set above for authentication to a
-; btcd RPC server.
-; btcdusername=
-; btcdpassword=
+; pktd RPC server.
+; pktdusername=
+; pktdpassword=
 
 
 ; ------------------------------------------------------------------------------
